ini tugas P03JQuery Kusnatul Apipah-NIM: 41226056

--- a/P03JQuery/bestie.html
+++ b/P03JQuery/bestie.html
@@ -102,7 +102,7 @@
 </table>
 
 <div id="tombol" class="tombol-back-to-first-page">
-	<a onclick="alert('Kembali ke Page Home?)" href="P03/index.html"
+	<a onclick="alert('Kembali ke Page Home?)" href="../P03/index.html"
 	>Back to Home</a>
 </div>
 
